| Summary: | ASTERISK-22188: Asterisk crashes inside pjsip when an address is unreachable | ||
| Reporter: | Kinsey Moore (kmoore) | Labels: | |
| Date Opened: | 2013-07-24 09:16:16 | Date Closed: | 2013-08-06 07:40:12 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 12 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | chan_gulp/pjsip setup to register to a server whose network isn't available. | Attachments: | ( 0) trace.txt |
| Description: | [bob]
type=auth username=bob password=bob [bob] type=registration server_uri=sip:bob@vita client_uri=sip:bob@10.24.20.81 outbound_auth=bob expiration=10 Assuming 10.24.20.81 is not on an accessible network, this crashes. Backtrace below: [edit - backtrace removed and attached] | ||
| Comments: | |||